--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,11 @@ body {
     align-items: center;
 }
 
+#toDo {
+    display: flex;
+    gap: 16px;
+}
+
 .card {
     display: flex;
     flex-direction: column;
