Refactored html layout to populate via javascript
FormBuilder class creates layout, LayoutSwitcher populates display

--- a/src/style.css
+++ b/src/style.css
@@ -55,14 +55,8 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Original CSS */
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#toDo {
-    display: flex;
-    gap: 16px;
+    display: grid;
+	grid-template-columns: 5rem 1fr;
 }
 
 .card {
@@ -75,5 +69,7 @@ body {
     padding: 12px;
 }
 
-
+.hidden {
+	display: none;
+}
 
