Fixed bug with project select filtering
Split methods in card manager such that map is first initialized with empty arrays and then todo cards are pushed to array, so that when there are no todos in a project it properly displays no cards rather than crashing

--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@ nav img {
 
 #grid {
 	height: 100%;
-    display: grid;
+  display: grid;
 	grid-template-columns: 5rem 1fr;
 }
 
@@ -83,6 +83,12 @@ nav img {
     height: 150px;
     background-color: pink;
     padding: 12px;
+}
+
+#toDo {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
 }
 
 .hidden {
